[metadata]
name = tomodraw
version = attr: tomodraw.__version__
author = TomJGooding
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/tomodraw
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.79.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tomodraw = tomodraw.app:run

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    textual-dev
